--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gelato do Sabor | Sorvetes Artesanais</title>
     <meta name="description" content="Gelato do Sabor — sorvetes artesanais feitos com ingredientes naturais e receitas de família desde 1985. Conheça nossos sabores e promoções.">
 
-    <link rel="stylesheet" href="assets/css/style2.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Caprasimo&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -484,3 +484,4 @@
 </body>
 
 </html>
+
